made progress in parser

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ scheesim-solve = { path = "scheesim-solve" }
 scheesim-concurrent = { path = "scheesim-concurrent" }
 scheesim-macro = { path = "scheesim-macro" }
 scheesim-impl = { path = "scheesim-impl" }
+scheesim-lexparse = { path = "scheesim-lexparse" }
